--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -20,12 +20,12 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/sign_in"
-        android:textSize="32sp"
-        android:textStyle="bold"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
+        android:text="@string/sign_in"
         android:textColor="@color/white"
+        android:textSize="32sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -40,7 +40,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
     <ImageView
         android:id="@+id/imageView3"
@@ -57,16 +56,15 @@
         android:id="@+id/card1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="12dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="8dp"
         app:cardUseCompatPadding="true"
-        app:layout_constraintTop_toTopOf="@+id/imageView2"
-        >
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView2">
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
@@ -84,8 +82,8 @@
                 android:hint="@string/type_your_email"
                 android:inputType="textEmailAddress"
                 android:paddingStart="12dp"
-                android:paddingEnd="12dp"
-                android:paddingTop="15dp"/>
+                android:paddingTop="15dp"
+                android:paddingEnd="12dp" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -95,16 +93,15 @@
         android:id="@+id/card2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="8dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="8dp"
         app:cardUseCompatPadding="true"
-        app:layout_constraintTop_toBottomOf="@+id/card1"
-        >
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/card1">
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
@@ -112,8 +109,8 @@
             android:background="@color/white"
             app:boxStrokeWidth="0dp"
             app:boxStrokeWidthFocused="0dp"
-            app:passwordToggleEnabled="true"
-            app:hintEnabled="false">
+            app:hintEnabled="false"
+            app:passwordToggleEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/passET"
@@ -121,10 +118,10 @@
                 android:layout_height="match_parent"
                 android:background="@color/white"
                 android:hint="@string/type_your_pass"
-                android:inputType="textEmailAddress"
+                android:inputType="textPassword"
                 android:paddingStart="12dp"
-                android:paddingEnd="12dp"
-                android:paddingTop="15dp"/>
+                android:paddingTop="15dp"
+                android:paddingEnd="12dp" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -133,9 +130,9 @@
     <ImageView
         android:layout_width="55dp"
         android:layout_height="55dp"
-        android:src="@drawable/btn"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="12dp"
+        android:src="@drawable/btn"
         app:layout_constraintEnd_toEndOf="@+id/card2"
         app:layout_constraintTop_toBottomOf="@+id/card2" />
 
@@ -143,10 +140,10 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:textSize="16sp"
         android:layout_marginStart="12dp"
+        android:layout_marginTop="16dp"
         android:text="@string/not_registered"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="@+id/card2"
         app:layout_constraintTop_toBottomOf="@+id/card2" />
 
@@ -154,10 +151,24 @@
         android:id="@+id/authTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:text="@string/sign_up"
-        android:textSize="16sp"
         android:textColor="@color/text_color"
+        android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toTopOf="@+id/textView2" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminateTint="@color/text_color"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
